Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10906

Flicking a QListView sometimes causes the list to paint itself incorrectly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 4.7.0
    • 4.6.2
    • (Inactive) Maemo 5
    • None
    • N900 w/ the unofficial PR1.2 firmware.
    • d20d11daa158a3b1a364c6e047be28b1c1c22edf

    Description

      The kinetic scroller in Maemo5 sometimes causes a QListView to be painted incorrectly. Steps to reproduce:

      1. Create a large enough QListView
      2. Flick it fast. Helps especially if you have some background processing going on. The faster you flick it (especially if you've set higher scrolls per second on it) and the "heavier" your list is, the easier this is to reproduce.
      3. The list sometimes gets stuck as if the overshoot would not fall back the whole way. The list's rectangle is still correct, as you can paint outside the list itself and it works, so I reckon this is just a bug with the overshoot functionality in the kinetic scroller. It is possible for the list to be stuck for the whole width/height of the overshoot area.

      This behavior occurs in both left-to-right and up-to-down list orientations. Note that this behavior is detected using the unofficial PR1.2 firmware for the N900, but taking the latest kinetic source codes from Fremantle-4.6.2-PR1.2 branch it can be reproduced in a desktop environment also. Regardless, this is a pretty serious issue, so it's worth making sure it doesn't happen with the upcoming official Qt release that's included with the PR1.2 firmware.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dohollan Dominik Holland (closed Nokia identity) (Inactive)
            laitaan Antti Laitala
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes