Bugfix: Reset to overshoot position, when viewport was moved externally

Task: QTBUG-10906
Reviewed-By: Robert Griebl